# dhansutra-backend

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/api/v1/: routes.py
app/api/v1/routers/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  dashboard.py  goals.py  settings.py  transactions.py  users.py
app/core/: app_factory.py  config.py  database.py  dependencies.py  exceptions.py  exceptions_handler.py  logging.py  openapi.py  responses.py  security.py
app/domain/: constants.py  enums.py
app/models/: __init__.py  account.py  base.py  budget.py  category.py  notification.py  refresh_token.py  savings_goal.py  setting.py  transaction.py  user.py
app/repositories/: account_repository.py  budget_repository.py  category_repository.py  notification_repository.py  refresh_token_repository.py  savings_goal_repository.py  setting_repository.py  transaction_repository.py  user_repository.py
app/schemas/: account.py  analytics.py  auth.py  budget.py  category.py  common.py  dashboard.py  savings_goal.py  setting.py  transaction.py  user.py
app/services/: account_service.py  analytics_service.py  auth_service.py  budget_service.py  category_service.py  dashboard_service.py  notification_service.py  savings_goal_service.py  setting_service.py  transaction_service.py  user_service.py
app/utils/: datetime.py  filters.py  pagination.py
docs/: api_mapping.md  architecture.md  ci_cd.md  contribution_guide.md  error_contracts.md  frontend_handoff.md  release_process.md  sample_payloads.md
scripts/: seed.py  smoke_test_api.py
tests/: conftest.py
tests/api/: test_accounts.py  test_analytics.py  test_auth.py  test_budgets.py  test_categories.py  test_dashboard.py  test_goals.py  test_isolation.py  test_settings.py  test_transactions.py  test_users.py
tests/services/: test_budget_service.py  test_goal_service.py  test_transaction_service.py
