[project]
name = "dhansutra-backend"
version = "0.1.0"
description = "Production-grade local-first backend for the DhanSutra finance app."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "greenlet>=3.0.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "python-dotenv>=1.0.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "coverage[toml]>=7.6.0",
  "types-passlib>=1.7.7.20240521",
  "types-python-jose>=3.3.4.20240106",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",
  # FastAPI dependency injection uses Depends()/Query()/Security() defaults by design.
  "B008",
  # Python 3.11+ and stdlib differences; keep code portable.
  "UP017",
  "UP042",
  # SQLAlchemy Base.type_annotation_map is a deliberate mutable class attribute.
  "RUF012",
  # __all__ ordering is non-critical here.
  "RUF022",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict = true
mypy_path = ["app"]
plugins = []
exclude = "^(tests/|alembic/)"

[[tool.mypy.overrides]]
module = [
  "app.api.v1.routers.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

